added banner and made responsive

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 </head>
 
-<body class="max-w-[90ren]">
-    <header class="bg-headerBg text-white px-[1.5rem] lg:px-[2.5rem] py-[2.5rem]">
+<body class="max-w-[90ren] bg-white" >
+    <header class="bg-[#264653] text-white px-[1.5rem] lg:px-[5rem] py-[2.5rem]">
 
         <!-- Navbar start -->
         <nav class="flex flex-row justify-between items-center">
@@ -46,8 +46,9 @@
                         <li><a href="">Shop</a></li>
                         <li><a href="">Contact</a></li>
                     </ul>
-
+                    
                     <button class="btn bg-[#E76F51] font-medium text-white mt-[0.5rem]">Login</button>
+
                 </div>
             </div>
 
@@ -60,12 +61,26 @@
                     <li><a href="">Shop</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
-
                 <button class="btn btn-lg bg-[#E76F51] font-medium  text-white mt-[0.5rem]">Login</button>
             </div>
         </nav>
         <!-- navbar end -->
 
+        <!-- Banner Starts -->
+
+        <div class="banner mt-[3rem] lg:flex flex-row items-center justify-between">
+            <div class="banner-txt text-white">
+                <h3 >Computer-controlled digital transistorized with electronic advance</h3>
+                <h3 class="text-[2.5rem] font-semibold">Honda CBR 300R</h3>
+                <p class="text-neutral-300">Amet minim mollit non deserunt ullamco est sit aliqua <br> dolor do amet sint. Velit officia consequat duis enim velit <br> mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn btn-lg bg-[#E76F51] font-medium  text-white mt-[1.5rem]">Purchase</button>
+            </div>
+            <div class="banner-img mt-[2rem] lg:mt-0">
+                <img src="images/others/red-bike.png" alt="">
+            </div>
+        </div>
+
+        <!-- Banner Ends -->
 
     </header>
 </body>
