--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 
         .collapse {
             border-radius: 5px;
-            /* border: 1px solid #D5E5FB; */
-            border: 2px solid salmon;
+            border: 1px solid #D5E5FB;
+            /* border: 2px solid salmon; */
             margin-bottom: 1rem;
         }
     </style>
 
 </head>
 
-<body class="max-w-[90ren] max-h-[250rem]">
+<body class="max-w-[90ren]">
     <header class="bg-[#264653] text-white px-[1.5rem] lg:px-[5rem] py-[2.5rem]">
 
         <!-- Navbar start -->
