fixed some responsiveness issues

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </head>
 
-<body class="max-w-[90ren]">
+<body class="max-w-[90rem] mx-auto">
     <header class="bg-[#264653] text-white px-[1.5rem] lg:px-[5rem] py-[2.5rem]">
 
         <!-- Navbar start -->
@@ -117,7 +117,7 @@
     <!-- Featured Bikse Section ends -->
 
     <!-- Latest News -->
-    <section class="latest-news mt-[5rem] px-[8rem]">
+    <section class="latest-news mt-[5rem] px-[3rem]">
         <h2 class="text-[2.5rem] font-semibold text-[#0A0826] mb-[2.5rem] text-center">Latest News</h2>
 
         <div class="news-cards flex flex-col items-center lg:flex-row gap-x-[1.25rem]">
@@ -298,8 +298,8 @@
     <!-- FAQ Section Ends -->
 
 
-    <footer class="bg-[#0B0D17] text-white py-[4rem] px-6 flex flex-col lg:flex-row items-center justify-between">
-        <div class="footer-txt">
+    <footer class="bg-[#0B0D17] text-white py-[4rem] px-6 flex flex-col lg:flex-row items-center justify-between lg:px-[8rem]">
+        <div class="footer-txt ">
             <div class="first-part flex flex-row gap-x-[1.5rem]">
                 <h2>Download Now</h2>
                 <h2>License</h2>
